Renommer l'application en RoutineMind

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "com.progressmind.app",
-  "appName": "ProgressMind",
+  "appId": "com.routinemind.app",
+  "appName": "RoutineMind",
   "webDir": "dist",
   "bundledWebRuntime": false
 }
