--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,5 +2,23 @@
   "appId": "com.routinemind.app",
   "appName": "RoutineMind",
   "webDir": "dist",
-  "bundledWebRuntime": false
+  "bundledWebRuntime": false,
+  "server": {
+    "androidScheme": "https"
+  },
+  "android": {
+    "allowMixedContent": true,
+    "captureInput": true,
+    "webContentsDebuggingEnabled": false
+  },
+  "plugins": {
+    "SplashScreen": {
+      "launchShowDuration": 2000,
+      "backgroundColor": "#7c3aed",
+      "showSpinner": false
+    },
+    "StatusBar": {
+      "style": "dark"
+    }
+  }
 }
